--- a/wiki/Plugins.wiki
+++ b/wiki/Plugins.wiki
@@ -5,6 +5,13 @@
 
 This is an API for loading DLLs with the intent of adding functionality to a running JS engine.
 
+List of current plugins:
+
+  * [PluginNCurses ncurses bindings]
+  * [PluginSQLite3 sqlite3 bindings]
+  * [PluginWhio i/o stream classes]
+  * [PluginStringFuncs supplemental string functions]
+
 ==C++-side==
 
 From C++ code, you need to do the following...
