Edited wiki page through web user interface.

--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -13,6 +13,7 @@ http://code.google.com/p/v8-juice/source/browse/
 
   * Started adding `extra-plugins` repository for plugins with licenses which may not allow them to live in the main tree.
   * Added new plugin: [PluginReadline]
+  * Several little improvements/additions to the [PluginWhio I/O classes].
 
 ==2009 March 7==
 
